--- a/launch.json
+++ b/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "compounds": [
         {
@@ -43,10 +40,10 @@
                 "qhana_plugin_runner.celery_worker:CELERY",
                 "worker",
                 "--concurrency",
-                "1",
-                "--pool=solo",
+                "2",
+                "--pool=threads",
                 "--loglevel",
-                "INFO"
+                "DEBUG"
             ]
         }
     ]
