--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ PyMySQL = { version = "^1.0.2", optional = true }
 pyrfc6266 = "^1.0.2"
 blinker = "^1.6.2"
 urllib3 = "^1.26"                                   # we use this version to avoid a dependency conflict with Qiskit dependencies that don't support version 2 yet
-numpy = "^2.2.1"
+numpy = ">=1.22, <1.24"
+qiskit = "0.43.2"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=24.1.1,<24.2.0"
